added Posts Controller and authentication with jwt
